force-app/main/default/objects/Manufacturer__c/Manufacturer__c.object-meta.xml
<CustomObject>
    <label>メーカー</label>
    <pluralLabel>メーカー</pluralLabel>
    <nameField>
        <label>メーカー名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 