force-app/main/default/objects/Manufacturer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>メールアドレス</label>
    <type>Email</type>
</CustomField> 