force-app/main/default/objects/Manufacturer__c/fields/ManufacturerCode__c.field-meta.xml
<CustomField>
    <fullName>ManufacturerCode__c</fullName>
    <label>メーカーコード</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField> 