force-app/main/default/objects/Manufacturer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>電話番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField> 