force-app/main/default/objects/Manufacturer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有効</fullName>
                <default>true</default>
                <label>有効</label>
            </value>
            <value>
                <fullName>無効</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 